alignment issues, transparent favicon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1244,7 +1244,7 @@ input, select, textarea {
 		top: 4rem;
 		text-align: center;
 		text-transform: lowercase;
-		width: 17.3em;
+		width: 17.0em;
 		z-index: 1;
 	}
 
